# language-templates-benchmark

./: .gitignore  README.md  docker-compose.yml  init.sql  install-cli.ps1  install-cli.sh
genlang-cli/templates/rust/grpc/: Cargo.toml
genlang-cli/templates/rust/grpc/src/: main.rs
genlang-cli/templates/rust/grpc/src/handlers/: mod.rs
genlang-cli/templates/rust/service-mesh/: Cargo.toml
genlang-cli/templates/rust/service-mesh/src/: main.rs
genlang-cli/templates/rust/service-mesh/static/: index.html
rust-template/: .env.example  Cargo.toml  Dockerfile  build.rs  index.html
rust-template/src/: config.rs  database.rs  error.rs  lib.rs  main.rs  proto.rs
rust-template/src/client/: mod.rs
rust-template/src/grpc/: mod.rs  server.rs
rust-template/src/models/: mod.rs
rust-template/src/routes/: api.rs  database.rs  internal.rs  mod.rs
rust-template/static/: index.html
scaffold-cli/: Cargo.toml
scaffold-cli/src/: main.rs
scaffold-cli/templates/c/: main.c
scaffold-cli/templates/c/http/: Dockerfile  Makefile  main.c
scaffold-cli/templates/c/http/include/: config.h
scaffold-cli/templates/c/http/src/: main.c
scaffold-cli/templates/c/http/tests/: test_main.c
scaffold-cli/templates/go/: main.go
scaffold-cli/templates/go/grpc/: Dockerfile  go.mod  main.go
scaffold-cli/templates/go/http/: Dockerfile  go.mod  main.go
scaffold-cli/templates/go/service-mesh/: Dockerfile  go.mod  main.go
scaffold-cli/templates/go/static/: index.html
scaffold-cli/templates/python/: Dockerfile  main.py
scaffold-cli/templates/python/grpc/: main.py
scaffold-cli/templates/python/http/: Dockerfile  requirements.txt
scaffold-cli/templates/python/http/app/: __init__.py  main.py
scaffold-cli/templates/python/http/services/: compute.py
scaffold-cli/templates/python/http/tests/: test_api.py
scaffold-cli/templates/python/service-mesh/: requirements.txt
scaffold-cli/templates/python/src/routes/: web.py
scaffold-cli/templates/rust/grpc/: Cargo.toml  Dockerfile
scaffold-cli/templates/rust/grpc/proto/: benchmark.proto
scaffold-cli/templates/rust/grpc/src/: main.rs
scaffold-cli/templates/rust/http/: Cargo.toml  Dockerfile
scaffold-cli/templates/rust/http/src/: database.rs  error.rs  main.rs
scaffold-cli/templates/rust/service-mesh/: Cargo.toml  Dockerfile
scaffold-cli/templates/rust/src/: constants.rs  main.rs
scaffold-cli/templates/rust/src/models/: response.rs
scaffold-cli/templates/rust/src/routes/: health.rs  web.rs
scaffold-cli/templates/rust/tests/: integration_test.rs
(+84 files in other folders)
