[package]
name = "rust-template"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust web service template for benchmarking"
authors = ["Nicolas Alcaraz"]
license = "MIT"
repository = "https://github.com/dablon/language-templates-benchmark"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json"] }

[[bin]]
name = "rust-template"
path = "src/main.rs"

[lib]
name = "rust_template"
path = "src/lib.rs"
