[package]
name = "scaffold-cli"
version = "0.1.0"
edition = "2021"
description = "Scaffold web service projects in multiple languages with configurable options"
authors = ["Nicolas Alcaraz"]
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
inquire = "0.7"
walkdir = "2.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[profile.release]
strip = true
lto = true
codegen-units = 1